--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.8.2",
     "@clerk/nextjs": "^5.1.3",
     "@google/generative-ai": "^0.12.0",
     "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-icons": "^5.4.0",
     "react-webcam": "^7.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
