--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^5.1.3",
     "@google/generative-ai": "^0.12.0",
     "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-progress": "^1.1.0",
