--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -33,6 +33,7 @@
     "react-hook-speech-to-text": "^0.8.0",
     "react-icons": "^5.4.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.14.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
