--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-icons": "^5.4.0",
+    "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.2.0",
     "recharts": "^2.14.1",
     "sonner": "^1.4.41",
